Agregado de nombre completo de imagenes

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Primera etapa - Compilar y empaquetar la aplicación
-FROM maven:3.8.1-openjdk-17-slim AS build
+FROM docker.io/library/maven:3.8.1-openjdk-17-slim AS build
 WORKDIR /app
 COPY ../pom.xml .
 RUN mvn dependency:go-offline
@@ -7,7 +7,7 @@ COPY ../src /app/src/
 RUN mvn package -DskipTests
 
 # Segunda etapa - Ejecutar la aplicación
-FROM eclipse-temurin:17-jre-alpine
+FROM docker.io/library/eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/demo-0.0.1-SNAPSHOT.jar app.jar
 CMD ["java", "-jar", "app.jar"]
